Replace Scout runtime with H38 Deals thin web shell