@@ -13,20 +13,20 @@ import android.location.LocationManager;
 import android.net.Uri;
 import android.os.Bundle;
 import android.os.Looper;
-import android.provider.Settings;
+import android.provider.MediaStore;
+import android.speech.RecognizerIntent;
 import android.util.Base64;
-import android.view.ViewGroup;
 import android.webkit.JavascriptInterface;
+import android.webkit.ValueCallback;
+import android.webkit.WebChromeClient;
+import android.webkit.WebResourceRequest;
 import android.webkit.WebSettings;
 import android.webkit.WebView;
 import android.webkit.WebViewClient;
 import android.widget.FrameLayout;
 import android.widget.Toast;
 
-import androidx.browser.customtabs.CustomTabsIntent;
-import androidx.core.graphics.Insets;
-import androidx.core.view.ViewCompat;
-import androidx.core.view.WindowInsetsCompat;
+import androidx.core.content.FileProvider;
 
 import com.google.mlkit.vision.barcode.common.Barcode;
 import com.google.mlkit.vision.codescanner.GmsBarcodeScanner;
@@ -39,170 +39,343 @@ import org.json.JSONObject;
 
 import java.io.ByteArrayOutputStream;
 import java.io.File;
-import java.io.InputStream;
-import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.Locale;
 
+/**
+ * H38 Deals native shell.
+ *
+ * Product logic lives on the hosted Penny, Resale and Couponing web apps. This
+ * activity intentionally owns only reusable phone capabilities so product fixes
+ * can ship without replacing the APK.
+ */
 public final class MainActivity extends Activity {
-    public static final String V200_RUNTIME = "H38_SCOUT_V200_CLEAN_RUNTIME";
-    public static final String V250_PACKAGED_PROVIDER_LAYER = "V250_PACKAGED_PROVIDER_LAYER";
-    private static final String APP_BASE_URL = "https://highway38solutions.com/commercial-app/reseller-owner-test/";
-    private static final int REQUEST_LOCATION = 3901;
-    private static final int REQUEST_PHOTO = 3902;
-    private FrameLayout contentRoot;
+    public static final String H38_DEALS_THIN_SHELL = "H38_DEALS_THIN_SHELL_V310";
+    private static final String SHELL_URL = "https://jqukmwtsgcsaruucnqja.supabase.co/functions/v1/h38-deals-shell";
+    private static final String INTERNAL_PREFIX = "https://jqukmwtsgcsaruucnqja.supabase.co/functions/v1/h38-";
+    private static final int REQUEST_LOCATION = 4101;
+    private static final int REQUEST_PHOTO = 4102;
+    private static final int REQUEST_WEB_FILE = 4103;
+    private static final int REQUEST_SPEECH = 4104;
+    private static final int REQUEST_WEB_CAMERA_PERMISSION = 4105;
+
     private WebView webView;
     private String pendingPhotoRole = "item";
+    private ValueCallback<Uri[]> fileChooser;
+    private Uri pendingCameraUri;
+    private File pendingCameraFile;
 
     @Override public void onCreate(Bundle state) {
         super.onCreate(state);
-        getWindow().setStatusBarColor(Color.rgb(13, 42, 62));
+        getWindow().setStatusBarColor(Color.rgb(11, 36, 56));
         getWindow().setNavigationBarColor(Color.WHITE);
-        contentRoot = new FrameLayout(this);
-        contentRoot.setBackgroundColor(Color.rgb(243, 246, 248));
+
+        FrameLayout root = new FrameLayout(this);
+        root.setBackgroundColor(Color.rgb(243, 246, 248));
         webView = new WebView(this);
         webView.setBackgroundColor(Color.rgb(243, 246, 248));
-        contentRoot.addView(webView, new FrameLayout.LayoutParams(ViewGroup.LayoutParams.MATCH_PARENT, ViewGroup.LayoutParams.MATCH_PARENT));
-        setContentView(contentRoot);
-        applyInsets();
+        root.addView(webView, new FrameLayout.LayoutParams(-1, -1));
+        setContentView(root);
 
         WebSettings settings = webView.getSettings();
         settings.setJavaScriptEnabled(true);
         settings.setDomStorageEnabled(true);
         settings.setDatabaseEnabled(true);
         settings.setAllowFileAccess(false);
-        settings.setAllowContentAccess(false);
+        settings.setAllowContentAccess(true);
         settings.setMediaPlaybackRequiresUserGesture(true);
-        settings.setUserAgentString(settings.getUserAgentString() + " H38ResellerScoutAndroid/2.5.0");
+        settings.setUserAgentString(settings.getUserAgentString() + " H38DealsAndroid/3.1.0");
 
         NativeBridge bridge = new NativeBridge();
-        webView.addJavascriptInterface(bridge, "AndroidH38Reseller");
-        webView.addJavascriptInterface(bridge, "AndroidH38Scout");
+        webView.addJavascriptInterface(bridge, "AndroidH38Deals");
         webView.setWebViewClient(new WebViewClient() {
             @Override public boolean shouldOverrideUrlLoading(WebView view, String url) {
-                if (url == null) return false;
-                if (url.startsWith(APP_BASE_URL)) return false;
-                if (url.startsWith("http://") || url.startsWith("https://")) { openExternal(url); return true; }
-                return false;
+                return routeUrl(url);
             }
-            @Override public void onPageFinished(WebView view, String url) { deliverSharedText(getIntent()); }
+            @Override public boolean shouldOverrideUrlLoading(WebView view, WebResourceRequest request) {
+                return routeUrl(request == null || request.getUrl() == null ? null : request.getUrl().toString());
+            }
         });
-        webView.loadDataWithBaseURL(APP_BASE_URL, bundledPage(), "text/html", "UTF-8", null);
-    }
-
-    private void applyInsets() {
-        ViewCompat.setOnApplyWindowInsetsListener(contentRoot, (view, insets) -> {
-            Insets bars = insets.getInsets(WindowInsetsCompat.Type.systemBars() | WindowInsetsCompat.Type.displayCutout());
-            view.setPadding(bars.left, bars.top, bars.right, bars.bottom);
-            webView.setPadding(0, 0, 0, 0);
-            return WindowInsetsCompat.CONSUMED;
+        webView.setWebChromeClient(new WebChromeClient() {
+            @Override public boolean onShowFileChooser(WebView view, ValueCallback<Uri[]> callback, FileChooserParams params) {
+                if (fileChooser != null) fileChooser.onReceiveValue(null);
+                fileChooser = callback;
+                if (checkSelfPermission(Manifest.permission.CAMERA) != PackageManager.PERMISSION_GRANTED) {
+                    requestPermissions(new String[]{Manifest.permission.CAMERA}, REQUEST_WEB_CAMERA_PERMISSION);
+                } else {
+                    launchWebFileChooser(true);
+                }
+                return true;
+            }
         });
-        ViewCompat.requestApplyInsets(contentRoot);
+        webView.loadUrl(SHELL_URL);
     }
 
-    private String bundledPage() {
-        String html = readAsset("reseller/index.html");
-        html = html.replace("<link rel=\"stylesheet\" href=\"v200-ui.css\">", "<style>" + readAsset("reseller/v200-ui.css") + "</style>");
-        for (String name : new String[]{"v200-core.js", "v200-hunt.js", "v200-auctions.js", "v200-discover.js", "v200-scan.js", "v200-more.js", "v210-polish.js", "v211-wide.js", "v212-physical.js", "v220-profit.js", "v220-track.js", "v220-product.js", "v200-app.js"}) {
-            html = html.replace("<script src=\"" + name + "\"></script>", "<script data-h38-bundled-module=\"" + name + "\">" + readAsset("reseller/" + name) + "</script>");
-        }
-        String appMarker = "<script data-h38-bundled-module=\"v200-app.js\">";
-        String providerLayer = "<script data-h38-bundled-module=\"v240-data.js\">" + readAsset("reseller/v240-data.js") + "</script>";
-        html = html.replace(appMarker, providerLayer + appMarker);
-        return html;
-    }
-
-    private String readAsset(String path) {
-        try (InputStream in = getAssets().open(path); ByteArrayOutputStream out = new ByteArrayOutputStream()) {
-            byte[] buffer = new byte[8192]; int count;
-            while ((count = in.read(buffer)) > 0) out.write(buffer, 0, count);
-            return new String(out.toByteArray(), StandardCharsets.UTF_8);
-        } catch (Exception e) {
-            return "<!doctype html><body><h2>Scout asset failed to load</h2><pre>" + e.getMessage() + "</pre></body>";
-        }
-    }
-
-    private void openExternal(String url) {
-        try {
-            if (url == null || !(url.startsWith("https://") || url.startsWith("http://"))) return;
-            CustomTabsIntent tabs = new CustomTabsIntent.Builder().setShowTitle(true).build(); tabs.launchUrl(this, Uri.parse(url));
-        } catch (Exception first) {
+    private boolean routeUrl(String url) {
+        if (url == null || url.isBlank()) return false;
+        if (url.startsWith(INTERNAL_PREFIX)) return false;
+        if (url.startsWith("https://") || url.startsWith("http://")) {
             try { startActivity(new Intent(Intent.ACTION_VIEW, Uri.parse(url))); }
-            catch (Exception second) { Toast.makeText(this, "Could not open link.", Toast.LENGTH_SHORT).show(); }
+            catch (Exception e) { Toast.makeText(this, "Could not open link.", Toast.LENGTH_SHORT).show(); }
+            return true;
+        }
+        return false;
+    }
+
+    private void launchWebFileChooser(boolean includeCamera) {
+        if (fileChooser == null) return;
+        try {
+            Intent pick = new Intent(Intent.ACTION_GET_CONTENT)
+                    .addCategory(Intent.CATEGORY_OPENABLE)
+                    .setType("image/*");
+            Intent chooser = Intent.createChooser(pick, "Choose image");
+            if (includeCamera) {
+                Intent camera = createCameraIntent();
+                if (camera != null) chooser.putExtra(Intent.EXTRA_INITIAL_INTENTS, new Intent[]{camera});
+            }
+            startActivityForResult(chooser, REQUEST_WEB_FILE);
+        } catch (Exception e) {
+            fileChooser.onReceiveValue(null);
+            fileChooser = null;
+            pendingCameraUri = null;
+            pendingCameraFile = null;
         }
     }
 
-    private static String first(String... values) { for (String value : values) if (value != null && !value.trim().isEmpty()) return value.trim(); return ""; }
-    private void deliverSharedText(Intent intent) {
-        if (intent == null || !Intent.ACTION_SEND.equals(intent.getAction())) return;
-        String type = intent.getType(); if (type != null && !type.startsWith("text/")) return;
-        String text = intent.getStringExtra(Intent.EXTRA_TEXT); if (text == null || text.trim().isEmpty()) text = intent.getStringExtra(Intent.EXTRA_SUBJECT);
-        if (text == null || text.trim().isEmpty()) return;
-        webView.evaluateJavascript("window.H38SharedOpportunity&&window.H38SharedOpportunity(" + JSONObject.quote(text.trim()) + ");", null); intent.setAction(null);
+    private Intent createCameraIntent() {
+        try {
+            pendingCameraFile = File.createTempFile("h38-web-photo-", ".jpg", getCacheDir());
+            pendingCameraUri = FileProvider.getUriForFile(this, getPackageName() + ".fileprovider", pendingCameraFile);
+            Intent camera = new Intent(MediaStore.ACTION_IMAGE_CAPTURE);
+            camera.putExtra(MediaStore.EXTRA_OUTPUT, pendingCameraUri);
+            camera.addFlags(Intent.FLAG_GRANT_READ_URI_PERMISSION | Intent.FLAG_GRANT_WRITE_URI_PERMISSION);
+            return camera;
+        } catch (Exception e) {
+            pendingCameraUri = null;
+            pendingCameraFile = null;
+            return null;
+        }
     }
+
     private void requestPhoneLocation() {
-        if (checkSelfPermission(Manifest.permission.ACCESS_FINE_LOCATION) != PackageManager.PERMISSION_GRANTED && checkSelfPermission(Manifest.permission.ACCESS_COARSE_LOCATION) != PackageManager.PERMISSION_GRANTED) { requestPermissions(new String[]{Manifest.permission.ACCESS_FINE_LOCATION, Manifest.permission.ACCESS_COARSE_LOCATION}, REQUEST_LOCATION); return; }
+        if (checkSelfPermission(Manifest.permission.ACCESS_FINE_LOCATION) != PackageManager.PERMISSION_GRANTED
+                && checkSelfPermission(Manifest.permission.ACCESS_COARSE_LOCATION) != PackageManager.PERMISSION_GRANTED) {
+            requestPermissions(new String[]{Manifest.permission.ACCESS_FINE_LOCATION, Manifest.permission.ACCESS_COARSE_LOCATION}, REQUEST_LOCATION);
+            return;
+        }
         deliverLocation();
     }
+
     private void deliverLocation() {
         try {
-            LocationManager manager = (LocationManager) getSystemService(LOCATION_SERVICE); Location best = null;
-            for (String provider : new String[]{LocationManager.GPS_PROVIDER, LocationManager.NETWORK_PROVIDER, LocationManager.PASSIVE_PROVIDER}) { try { Location candidate = manager.getLastKnownLocation(provider); if (candidate != null && (best == null || candidate.getAccuracy() < best.getAccuracy())) best = candidate; } catch (SecurityException ignored) {} }
-            if (best != null && System.currentTimeMillis() - best.getTime() < 15 * 60 * 1000L) { sendLocation(best.getLatitude(), best.getLongitude()); return; }
+            LocationManager manager = (LocationManager) getSystemService(LOCATION_SERVICE);
+            Location best = null;
+            for (String provider : new String[]{LocationManager.GPS_PROVIDER, LocationManager.NETWORK_PROVIDER, LocationManager.PASSIVE_PROVIDER}) {
+                try {
+                    Location candidate = manager.getLastKnownLocation(provider);
+                    if (candidate != null && (best == null || candidate.getAccuracy() < best.getAccuracy())) best = candidate;
+                } catch (SecurityException ignored) {}
+            }
+            if (best != null && System.currentTimeMillis() - best.getTime() < 15 * 60 * 1000L) {
+                sendLocation(best.getLatitude(), best.getLongitude());
+                return;
+            }
             String provider = manager.isProviderEnabled(LocationManager.GPS_PROVIDER) ? LocationManager.GPS_PROVIDER : LocationManager.NETWORK_PROVIDER;
             manager.requestSingleUpdate(provider, new LocationListener() {
                 @Override public void onLocationChanged(Location location) { sendLocation(location.getLatitude(), location.getLongitude()); }
-                @Override public void onProviderEnabled(String p) {} @Override public void onProviderDisabled(String p) {} @Override public void onStatusChanged(String p, int status, Bundle extras) {}
+                @Override public void onProviderEnabled(String p) {}
+                @Override public void onProviderDisabled(String p) {}
+                @Override public void onStatusChanged(String p, int status, Bundle extras) {}
             }, Looper.getMainLooper());
-        } catch (Exception e) { sendLocationError(e.getMessage() == null ? "Location unavailable" : e.getMessage()); }
+        } catch (Exception e) {
+            sendLocationError("Location unavailable");
+        }
     }
-    private void sendLocation(double lat, double lon) { webView.post(() -> webView.evaluateJavascript("window.H38NativeLocationResult&&window.H38NativeLocationResult(" + lat + "," + lon + ");", null)); }
-    private void sendLocationError(String text) { webView.post(() -> webView.evaluateJavascript("window.H38NativeLocationError&&window.H38NativeLocationError(" + JSONObject.quote(text) + ");", null)); }
-    private void sendBarcode(String value) { String finalValue = value == null ? "" : value.trim(); webView.post(() -> webView.evaluateJavascript("window.H38NativeBarcodeResult&&window.H38NativeBarcodeResult(" + JSONObject.quote(finalValue) + ");", null)); }
-    private void sendBarcodeError(String text) { String finalText = text == null || text.isBlank() ? "Barcode scan failed." : text; webView.post(() -> webView.evaluateJavascript("window.H38NativeBarcodeError&&window.H38NativeBarcodeError(" + JSONObject.quote(finalText) + ");", null)); }
+
+    private void sendLocation(double lat, double lon) {
+        webView.post(() -> webView.evaluateJavascript(
+                "window.H38NativeLocationResult&&window.H38NativeLocationResult(" + lat + "," + lon + ");", null));
+    }
+
+    private void sendLocationError(String message) {
+        webView.post(() -> webView.evaluateJavascript(
+                "window.H38NativeLocationError&&window.H38NativeLocationError(" + JSONObject.quote(message) + ");", null));
+    }
+
     private void scanBarcode() {
-        GmsBarcodeScannerOptions options = new GmsBarcodeScannerOptions.Builder().setBarcodeFormats(Barcode.FORMAT_ALL_FORMATS).enableAutoZoom().build();
+        GmsBarcodeScannerOptions options = new GmsBarcodeScannerOptions.Builder()
+                .setBarcodeFormats(Barcode.FORMAT_ALL_FORMATS)
+                .enableAutoZoom()
+                .build();
         GmsBarcodeScanner scanner = GmsBarcodeScanning.getClient(this, options);
-        scanner.startScan().addOnSuccessListener(barcode -> { String value = barcode.getRawValue(); if (value == null) value = barcode.getDisplayValue(); sendBarcode(value); }).addOnCanceledListener(() -> sendBarcodeError("Scan canceled")).addOnFailureListener(e -> runOnUiThread(this::startFallbackBarcodeScanner));
+        scanner.startScan()
+                .addOnSuccessListener(barcode -> {
+                    String value = barcode.getRawValue();
+                    if (value == null) value = barcode.getDisplayValue();
+                    sendBarcode(value);
+                })
+                .addOnCanceledListener(() -> sendBarcode(""))
+                .addOnFailureListener(e -> runOnUiThread(this::startFallbackBarcodeScanner));
     }
+
     private void startFallbackBarcodeScanner() {
-        try { IntentIntegrator integrator = new IntentIntegrator(this); integrator.setDesiredBarcodeFormats(IntentIntegrator.ALL_CODE_TYPES); integrator.setPrompt("Point the camera at the barcode"); integrator.setBeepEnabled(false); integrator.setOrientationLocked(true); integrator.initiateScan(); }
-        catch (Exception e) { sendBarcodeError("Barcode scanner unavailable. Type the UPC instead."); }
+        try {
+            IntentIntegrator integrator = new IntentIntegrator(this);
+            integrator.setDesiredBarcodeFormats(IntentIntegrator.ALL_CODE_TYPES);
+            integrator.setPrompt("Point the camera at the barcode");
+            integrator.setBeepEnabled(false);
+            integrator.setOrientationLocked(true);
+            integrator.initiateScan();
+        } catch (Exception e) {
+            sendBarcode("");
+        }
     }
+
+    private void sendBarcode(String value) {
+        String clean = value == null ? "" : value.trim();
+        webView.post(() -> webView.evaluateJavascript(
+                "window.H38NativeBarcodeResult&&window.H38NativeBarcodeResult(" + JSONObject.quote(clean) + ");", null));
+    }
+
+    private void speakList() {
+        try {
+            Intent intent = new Intent(RecognizerIntent.ACTION_RECOGNIZE_SPEECH);
+            intent.putExtra(RecognizerIntent.EXTRA_LANGUAGE_MODEL, RecognizerIntent.LANGUAGE_MODEL_FREE_FORM);
+            intent.putExtra(RecognizerIntent.EXTRA_LANGUAGE, Locale.getDefault());
+            intent.putExtra(RecognizerIntent.EXTRA_PROMPT, "Say your shopping list");
+            startActivityForResult(intent, REQUEST_SPEECH);
+        } catch (Exception e) {
+            sendSpeechError("Voice input unavailable");
+        }
+    }
+
+    private void sendSpeech(String text) {
+        String clean = text == null ? "" : text.trim();
+        webView.post(() -> webView.evaluateJavascript(
+                "window.H38NativeSpeechResult&&window.H38NativeSpeechResult(" + JSONObject.quote(clean) + ");", null));
+    }
+
+    private void sendSpeechError(String text) {
+        webView.post(() -> webView.evaluateJavascript(
+                "window.H38NativeSpeechError&&window.H38NativeSpeechError(" + JSONObject.quote(text) + ");", null));
+    }
+
     private void takePhoto(String role) {
-        pendingPhotoRole = role == null || role.trim().isEmpty() ? "item" : role.trim();
-        try { Intent intent = new Intent(this, NativePhotoCaptureActivity.class); intent.putExtra(NativePhotoCaptureActivity.EXTRA_ROLE, pendingPhotoRole); startActivityForResult(intent, REQUEST_PHOTO); }
-        catch (Exception e) { webView.evaluateJavascript("window.H38NativePhotoError&&window.H38NativePhotoError('Scout camera could not open.');", null); }
+        pendingPhotoRole = role == null || role.isBlank() ? "item" : role.trim();
+        try {
+            Intent intent = new Intent(this, NativePhotoCaptureActivity.class);
+            intent.putExtra(NativePhotoCaptureActivity.EXTRA_ROLE, pendingPhotoRole);
+            startActivityForResult(intent, REQUEST_PHOTO);
+        } catch (Exception e) {
+            sendPhotoError("Camera unavailable");
+        }
     }
+
+    private void sendPhotoError(String message) {
+        webView.post(() -> webView.evaluateJavascript(
+                "window.H38NativePhotoError&&window.H38NativePhotoError(" + JSONObject.quote(message) + ");", null));
+    }
+
+    private static Bitmap scaleForWeb(Bitmap source, int maxDimension) {
+        int w = source.getWidth(), h = source.getHeight();
+        if (w <= maxDimension && h <= maxDimension) return source;
+        double scale = Math.min((double) maxDimension / Math.max(1, w), (double) maxDimension / Math.max(1, h));
+        Bitmap out = Bitmap.createScaledBitmap(source,
+                Math.max(1, (int) Math.round(w * scale)),
+                Math.max(1, (int) Math.round(h * scale)), true);
+        if (out != source) source.recycle();
+        return out;
+    }
+
     @Override protected void onActivityResult(int requestCode, int resultCode, Intent data) {
         super.onActivityResult(requestCode, resultCode, data);
+
         IntentResult scanResult = IntentIntegrator.parseActivityResult(requestCode, resultCode, data);
-        if (scanResult != null) { if (scanResult.getContents() == null || scanResult.getContents().isBlank()) sendBarcodeError("Scan canceled"); else sendBarcode(scanResult.getContents()); return; }
+        if (scanResult != null) {
+            sendBarcode(scanResult.getContents());
+            return;
+        }
+
+        if (requestCode == REQUEST_SPEECH) {
+            if (resultCode != RESULT_OK || data == null) { sendSpeechError("Voice input canceled"); return; }
+            ArrayList<String> rows = data.getStringArrayListExtra(RecognizerIntent.EXTRA_RESULTS);
+            sendSpeech(rows == null || rows.isEmpty() ? "" : rows.get(0));
+            return;
+        }
+
+        if (requestCode == REQUEST_WEB_FILE) {
+            if (fileChooser == null) return;
+            Uri[] result = null;
+            if (resultCode == RESULT_OK) {
+                Uri uri = data != null ? data.getData() : null;
+                if (uri == null) uri = pendingCameraUri;
+                if (uri != null) result = new Uri[]{uri};
+            }
+            fileChooser.onReceiveValue(result);
+            fileChooser = null;
+            pendingCameraUri = null;
+            pendingCameraFile = null;
+            return;
+        }
+
         if (requestCode != REQUEST_PHOTO) return;
-        if (resultCode != RESULT_OK) { String error = data == null ? "Photo canceled" : data.getStringExtra(NativePhotoCaptureActivity.EXTRA_ERROR); if (error == null || error.isBlank()) error = "Photo canceled"; String finalError = error; webView.evaluateJavascript("window.H38NativePhotoError&&window.H38NativePhotoError(" + JSONObject.quote(finalError) + ");", null); return; }
-        String path = data == null ? "" : data.getStringExtra(NativePhotoCaptureActivity.EXTRA_PATH); String role = data == null ? pendingPhotoRole : data.getStringExtra(NativePhotoCaptureActivity.EXTRA_ROLE); File file = path == null || path.isBlank() ? null : new File(path); Bitmap bitmap = null;
+        if (resultCode != RESULT_OK) { sendPhotoError("Photo canceled"); return; }
+
+        String path = data == null ? null : data.getStringExtra(NativePhotoCaptureActivity.EXTRA_PATH);
+        String role = data == null ? pendingPhotoRole : data.getStringExtra(NativePhotoCaptureActivity.EXTRA_ROLE);
+        File file = path == null ? null : new File(path);
+        Bitmap bitmap = null;
         try {
-            if (file == null || !file.isFile() || file.length() <= 0) throw new IllegalStateException("Camera did not return an image"); bitmap = BitmapFactory.decodeFile(file.getAbsolutePath()); if (bitmap == null) throw new IllegalStateException("Camera returned an unreadable image"); bitmap = scaleForResearch(bitmap, 1600);
-            try (ByteArrayOutputStream out = new ByteArrayOutputStream()) { bitmap.compress(Bitmap.CompressFormat.JPEG, 84, out); String b64 = Base64.encodeToString(out.toByteArray(), Base64.NO_WRAP); String dataUrl = "data:image/jpeg;base64," + b64; String js = "window.H38NativePhotoResult&&window.H38NativePhotoResult(" + JSONObject.quote(role == null ? pendingPhotoRole : role) + "," + JSONObject.quote(dataUrl) + ");"; webView.evaluateJavascript(js, null); }
-        } catch (Exception e) { webView.evaluateJavascript("window.H38NativePhotoError&&window.H38NativePhotoError('Camera returned an unreadable image.');", null); }
-        finally { try { if (file != null && file.exists()) file.delete(); } catch (Exception ignored) {} if (bitmap != null && !bitmap.isRecycled()) bitmap.recycle(); }
+            if (file == null || !file.isFile() || file.length() <= 0) throw new IllegalStateException("No photo file");
+            bitmap = BitmapFactory.decodeFile(file.getAbsolutePath());
+            if (bitmap == null) throw new IllegalStateException("Unreadable photo");
+            bitmap = scaleForWeb(bitmap, 1600);
+            try (ByteArrayOutputStream out = new ByteArrayOutputStream()) {
+                bitmap.compress(Bitmap.CompressFormat.JPEG, 84, out);
+                String dataUrl = "data:image/jpeg;base64," + Base64.encodeToString(out.toByteArray(), Base64.NO_WRAP);
+                String finalRole = role == null ? pendingPhotoRole : role;
+                webView.evaluateJavascript(
+                        "window.H38NativePhotoResult&&window.H38NativePhotoResult(" + JSONObject.quote(finalRole) + "," + JSONObject.quote(dataUrl) + ");", null);
+            }
+        } catch (Exception e) {
+            sendPhotoError("Photo could not be read");
+        } finally {
+            try { if (file != null && file.exists()) file.delete(); } catch (Exception ignored) {}
+            if (bitmap != null && !bitmap.isRecycled()) bitmap.recycle();
+        }
     }
-    private static Bitmap scaleForResearch(Bitmap source, int maxDimension) { int w = source.getWidth(), h = source.getHeight(); if (w <= maxDimension && h <= maxDimension) return source; double scale = Math.min((double) maxDimension / Math.max(1, w), (double) maxDimension / Math.max(1, h)); int nw = Math.max(1, (int) Math.round(w * scale)), nh = Math.max(1, (int) Math.round(h * scale)); Bitmap scaled = Bitmap.createScaledBitmap(source, nw, nh, true); if (scaled != source) source.recycle(); return scaled; }
-    @Override public void onRequestPermissionsResult(int requestCode, String[] permissions, int[] grantResults) { super.onRequestPermissionsResult(requestCode, permissions, grantResults); if (requestCode != REQUEST_LOCATION) return; boolean granted = false; for (int result : grantResults) if (result == PackageManager.PERMISSION_GRANTED) granted = true; if (granted) deliverLocation(); else sendLocationError("Location permission denied"); }
-    @Override public void onBackPressed() { if (webView == null) { super.onBackPressed(); return; } webView.evaluateJavascript("(window.H38HandleBack?window.H38HandleBack():false)", value -> { if (!"true".equals(String.valueOf(value))) MainActivity.super.onBackPressed(); }); }
-    private String buildIdentity() { String sha = BuildConfig.H38_BUILD_SHA == null ? "local" : BuildConfig.H38_BUILD_SHA; if (sha.length() > 12) sha = sha.substring(0, 12); return "v" + BuildConfig.VERSION_NAME + " · code " + BuildConfig.VERSION_CODE + " · " + sha + " · run " + BuildConfig.H38_BUILD_RUN; }
+
+    @Override public void onRequestPermissionsResult(int requestCode, String[] permissions, int[] grantResults) {
+        super.onRequestPermissionsResult(requestCode, permissions, grantResults);
+        if (requestCode == REQUEST_LOCATION) {
+            for (int result : grantResults) if (result == PackageManager.PERMISSION_GRANTED) { deliverLocation(); return; }
+            sendLocationError("Location permission denied");
+            return;
+        }
+        if (requestCode == REQUEST_WEB_CAMERA_PERMISSION) {
+            boolean granted = false;
+            for (int result : grantResults) if (result == PackageManager.PERMISSION_GRANTED) granted = true;
+            launchWebFileChooser(granted);
+        }
+    }
+
+    @Override public void onBackPressed() {
+        if (webView != null && webView.canGoBack()) webView.goBack();
+        else super.onBackPressed();
+    }
+
+    private String buildIdentity() {
+        String sha = BuildConfig.H38_BUILD_SHA == null ? "local" : BuildConfig.H38_BUILD_SHA;
+        if (sha.length() > 12) sha = sha.substring(0, 12);
+        return "v" + BuildConfig.VERSION_NAME + " · code " + BuildConfig.VERSION_CODE + " · " + sha;
+    }
 
     private final class NativeBridge {
         @JavascriptInterface public void requestLocation() { runOnUiThread(MainActivity.this::requestPhoneLocation); }
         @JavascriptInterface public void scanBarcode() { runOnUiThread(MainActivity.this::scanBarcode); }
+        @JavascriptInterface public void speakList() { runOnUiThread(MainActivity.this::speakList); }
         @JavascriptInterface public void takePhoto(String role) { runOnUiThread(() -> MainActivity.this.takePhoto(role)); }
+        @JavascriptInterface public void reload() { runOnUiThread(() -> webView.loadUrl(SHELL_URL)); }
         @JavascriptInterface public String build() { return buildIdentity(); }
-        @JavascriptInterface public void reloadScout() { runOnUiThread(MainActivity.this::recreate); }
-        @JavascriptInterface public boolean notificationAccessEnabled() { try { String enabled = Settings.Secure.getString(getContentResolver(), "enabled_notification_listeners"); return enabled != null && enabled.contains(getPackageName()); } catch (Exception ignored) { return false; } }
-        @JavascriptInterface public void openNotificationAccessSettings() { runOnUiThread(() -> { try { startActivity(new Intent(Settings.ACTION_NOTIFICATION_LISTENER_SETTINGS)); } catch (Exception ignored) {} }); }
-        @JavascriptInterface public String facebookNotificationCandidates() { return FacebookMarketplaceNotificationListener.rowsJson(MainActivity.this); }
-        @JavascriptInterface public String facebookBrowserCandidates() { return FacebookMarketplaceActivity.rowsJson(MainActivity.this); }
-        @JavascriptInterface public void openFacebookMarketplace(String termsJson, double lat, double lon, int radius, String postal, String url) { runOnUiThread(() -> { Intent i = new Intent(MainActivity.this, FacebookMarketplaceActivity.class); i.putExtra(FacebookMarketplaceActivity.EXTRA_TERMS, termsJson == null ? "[]" : termsJson); if (Double.isFinite(lat) && Double.isFinite(lon) && !(lat == 0d && lon == 0d)) { i.putExtra(FacebookMarketplaceActivity.EXTRA_LAT, lat); i.putExtra(FacebookMarketplaceActivity.EXTRA_LON, lon); } i.putExtra(FacebookMarketplaceActivity.EXTRA_RADIUS, radius); i.putExtra(FacebookMarketplaceActivity.EXTRA_POSTAL, postal == null ? "" : postal); if (url != null && url.startsWith("https://www.facebook.com/marketplace/")) i.putExtra(FacebookMarketplaceActivity.EXTRA_URL, url); startActivity(i); }); }
-        @JavascriptInterface public void openExternalUrl(String url) { runOnUiThread(() -> openExternal(url)); }
-        @JavascriptInterface public void startDeviceStockCheck(String requestId, String bodyJson) { RetailerDeviceCheckManager.check(MainActivity.this, webView, requestId, bodyJson); }
-        @JavascriptInterface public void openRetailerSession(String bodyJson) { runOnUiThread(() -> { try { JSONObject b = new JSONObject(bodyJson == null ? "{}" : bodyJson); String retailer = b.optString("retailer", ""); String query = first(b.optString("upc", ""), b.optString("sku", ""), b.optString("title", ""), "tools"); Intent i = new Intent(MainActivity.this, RetailerVerificationActivity.class); i.putExtra(RetailerVerificationActivity.EXTRA_RETAILER, retailer); i.putExtra(RetailerVerificationActivity.EXTRA_QUERY, query); i.putExtra(RetailerVerificationActivity.EXTRA_SOURCE_URL, b.optString("source_url", "")); i.putExtra(RetailerVerificationActivity.EXTRA_STORE, b.optString("store_address", b.optString("store_name", ""))); startActivity(i); } catch (Exception ignored) {} }); }
     }
 }
